src_old/objects/ProjectAddEditViewCustomSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings stores list of editable fields on the ProjectAddEditView page</description>
    <fields>
        <fullName>FieldList__c</fullName>
        <inlineHelpText>List of fields comma separated that are editable on the page.</inlineHelpText>
        <label>FieldList</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <inlineHelpText>project type</inlineHelpText>
        <label>ProjectType</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>project status</inlineHelpText>
        <label>Status</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ProjectAddEditViewCustomSettings</label>
</CustomObject>